--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,8 @@
   "env": {
     "browser": true,
     "mocha": true,
-    "node": true
+    "node": true,
+    "jquery": true
   },
   "rules": {
     "quotes": [2, "single"],
