--- a/package.json
+++ b/package.json
@@ -46,5 +46,8 @@
     "style-loader": "^0.13.1",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
+  },
+  "dependencies": {
+    "moment": "^2.17.1"
   }
 }
